package com.example.barberbrisk.objects;

public interface user {
    String getName();
    void setName(String name);
    String getPhoneNumber();
    void setPhoneNumber(String phoneNumber);

    String getEmail();

    void setEmail(String Email);





}
